# open-interpreter

./: .mintignore  README.md  README_ES.md  README_ZH.md  announcement_tip.toml  defs.bzl  docs.json  docs.zh.json  justfile  package.json  style.css  techstack.md  techstack.yml
.codex/environments/: environment.toml
.github/ISSUE_TEMPLATE/: 1-codex-app.yml  2-extension.yml  3-cli.yml  4-bug-report.yml  5-feature-request.yml  6-docs-issue.yml
.github/actions/setup-bazel-ci/: action.yml
.github/scripts/: build-codex-package-archive.sh  check_readme_translations.py  install-musl-build-tools.sh
.github/workflows/: bazel.yml  blob-size-policy.yml  blocking-ci.yml  cargo-ci.yml  cargo-deny.yml  ci.yml  codespell.yml  postmerge-ci.yml  public-ci.yml  python-sdk-release.yml  readme-translations.yml  repo-checks.yml  rust-ci-full-nextest-platform.yml  rust-ci-full.yml  rust-ci.yml  rust-release-prepare.yml  rust-release-publish-existing.yml  rust-release-windows.yml  rust-release.yml  rusty-v8-release.yml  sdk.yml  update-tui-snapshots.yml  v8-canary.yml  website-docs-sync.yml
codex-rs/: Cargo.toml
codex-rs/.cargo/: config.toml
codex-rs/.config/: nextest.toml
codex-rs/acp-server/: BUILD.bazel  Cargo.toml
codex-rs/acp-server/src/: lib.rs
codex-rs/analytics/: Cargo.toml
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  client_tests.rs  events.rs  reducer.rs
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server-daemon/: Cargo.toml  README.md
codex-rs/app-server-daemon/src/: client.rs  lib.rs  managed_install.rs  managed_install_tests.rs  product_install.rs  update_loop.rs
codex-rs/app-server-protocol/src/: export.rs
codex-rs/app-server/src/: bespoke_event_handling.rs  interpreter_catalog.rs  interpreter_catalog_tests.rs  lib.rs  mcp_refresh.rs  message_processor.rs  models.rs  outgoing_message.rs  request_processors.rs
codex-rs/arg0/: Cargo.toml
codex-rs/arg0/src/: lib.rs
codex-rs/chat-wire-compat/: BUILD.bazel  Cargo.toml
codex-rs/chat-wire-compat/src/: client.rs  lib.rs  proxy.rs  request.rs  stream.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: doctor.rs  main.rs
codex-rs/cli/tests/: acp_protocol.rs  product_identity.rs
codex-rs/cloud-config/src/: service_tests.rs
codex-rs/code-mode/: Cargo.toml
codex-rs/code-mode-host/src/: main.rs
codex-rs/code-mode/src/: lib.rs  remote_session.rs  remote_session_tests.rs  service.rs  service_contract_tests.rs  service_tests.rs  v8_init.rs
codex-rs/code-mode/src/cell_actor/: callbacks.rs  mod.rs  tests.rs
codex-rs/code-mode/src/runtime/: mod.rs
codex-rs/code-mode/src/session_runtime/: tests.rs
codex-rs/code-mode/tests/: jit.rs
codex-rs/codex-api/: BUILD.bazel  model_compatibility_catalog.json  model_compatibility_overrides.json
codex-rs/codex-api/src/: anthropic.rs  auth.rs  common.rs  lib.rs  model_compatibility_catalog.rs  provider.rs
codex-rs/codex-api/tests/: models_integration.rs
codex-rs/codex-mcp/: Cargo.toml
codex-rs/codex-mcp/src/: connection_manager.rs  connection_manager_tests.rs  rmcp_client.rs
codex-rs/config/: Cargo.toml
codex-rs/config/src/: config_toml.rs  profile_toml.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core-api/src/: lib.rs
codex-rs/core-skills/tests/: environment_loader.rs
codex-rs/core/src/: agents_md_tests.rs  client.rs  client_common.rs  client_tests.rs  codex_thread.rs  compact.rs  compact_remote.rs  compact_remote_request.rs  compact_remote_v2.rs  compact_remote_v2_attempt.rs  compact_tests.rs  environment_selection.rs  event_mapping.rs  kimi_cron.rs  kimi_cron_expression.rs  kimi_cron_expression_tests.rs  kimi_cron_storage.rs  kimi_cron_tests.rs  lib.rs  mcp_tool_call_tests.rs  prompt_debug.rs  responses_metadata.rs  stream_events_utils.rs  test_support.rs  thread_manager.rs  (+2 more)
codex-rs/exec/: Cargo.toml
codex-rs/exec-server/: Cargo.toml
codex-rs/install-context/: Cargo.toml
codex-rs/install-context/src/: lib.rs
codex-rs/login/: Cargo.toml
codex-rs/model-provider-info/: BUILD.bazel  Cargo.toml  provider_catalog.json  provider_catalog_overrides.json
codex-rs/models-manager/: Cargo.toml  models.json
codex-rs/product-info/: BUILD.bazel  Cargo.toml
codex-rs/rmcp-client/: Cargo.toml
codex-rs/root-tui/: BUILD.bazel  Cargo.toml
codex-rs/root-tui/src/: main.rs
codex-rs/scripts/: write_model_compatibility_catalog.py  write_provider_catalog.py
codex-rs/tools/: BUILD.bazel
codex-rs/tui/: Cargo.toml
docs/: CLA.md  acp.md  agents_md.md  app-server.md  authentication.md  auto-review.md  cli-reference.md  config-reference.md  config.md  contributing.md  customization.md  cyber-safety.md  daemon.md  deepseek.md  example-config.md  exec.md  execpolicy.md  getting-started.md  github-action.md  harness.md  hooks.md  install.md  interactive.md  kimi-k3.md  license.md  mcp-server.md  mcp.md  memories.md  migrate.md  models.md  open-source-fund.md  permissions.md  plugins.md  project-license.md  prompting.md  providers.md  quickstart.md  remote.md  rules.md  sandbox.md  (+11 more)
docs-site/: LOCALIZATION.md  terminal-index.mdx
docs-site/zh/: terminal-index.mdx
docs/zh/: CLA.md  acp.md  agents_md.md  app-server.md  authentication.md  auto-review.md  cli-reference.md  config-reference.md  config.md  contributing.md  customization.md  cyber-safety.md  daemon.md  deepseek.md  example-config.md  exec.md  execpolicy.md  getting-started.md  github-action.md  harness.md  hooks.md  install.md  interactive.md  kimi-k3.md  license.md  mcp-server.md  mcp.md  memories.md  migrate.md  models.md  open-source-fund.md  permissions.md  plugins.md  project-license.md  prompting.md  providers.md  quickstart.md  remote.md  rules.md  sandbox.md  (+11 more)
scripts/: build-interpreter-release.sh  check-doc-locales.mjs  test-codex-sdk-compat.sh  test-remote-env.sh
scripts/codex_package/: README.md  cargo.py  cli.py  layout.py  targets.py  test_cargo.py  test_layout.py
scripts/install/: install-open-interpreter.ps1  install-open-interpreter.sh  install.ps1  install.sh  test_install_sh.py
(+561 files in other folders)
