[package]
name = "codex-acp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_acp_server"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
agent-client-protocol = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
codex-app-server-client = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-arg0 = { workspace = true }
codex-config = { workspace = true }
codex-core = { workspace = true }
codex-feedback = { workspace = true }
codex-login = { workspace = true }
codex-protocol = { workspace = true }
codex-product-info = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync"] }
tokio-util = { workspace = true, features = ["compat"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
