[package]
name = "codex-chat-wire-compat"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_chat_wire_compat"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
codex-api = { workspace = true }
codex-client = { workspace = true }
codex-protocol = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
