[package]
name = "codex-install-context"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_install_context"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
codex-product-info = { workspace = true }
codex-utils-absolute-path = { workspace = true }
codex-utils-home-dir = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
